# t.stas.bot

./: .gitattributes  .gitignore  README.md  Start Collector.bat  Start Dashboard.bat  dashboard.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: custom_maps.yaml  servers.json.example  ui.yaml
data/: README.md
docs/: USAGE.md
scripts/: _bootstrap.bat  _start_collector.bat  _start_dashboard.bat  export_release.bat  install_requirements.bat  run_daily_fetch.bat  run_dashboard_with_scheduler.bat  smoke_events.py  smoke_ledger.py
src/: __init__.py  analyzer.py  chart_renderers.py  config.py  custom_maps.py  downloader.py  embed_scheduler.py  fetch_ingest.py  parser.py  runtime_hooks.py  sched_terminal.py  scheduler.py  storage.py  terminal_menu.py  ui_settings.py  view.py
