[project]
name = "t-statistics-stas-bot"
version = "1.1.0"
description = "Travian map.sql collector, analyzer, and dashboard."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["travian", "stats", "map.sql", "analytics", "dashboard"]
authors = [
    { name = "t.statistics.stas.bot" }
]
dependencies = [
    "requests==2.32.3",
    "PyYAML==6.0.2",
    "schedule==1.2.2",
    "rich>=14.0",
    "streamlit>=1.35",
    "pandas>=2.0",
    "plotly>=5.18",
]

[project.scripts]
t-statistics = "main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
py-modules = ["main"]
package-dir = { "" = "" }
